Small vertical spacing fix

--- a/src/dark-admin.styl
+++ b/src/dark-admin.styl
@@ -124,7 +124,7 @@
 	.section-content > .button
 		margin-top 20px
 
-.rc-old .page-static .content .section h1
+.rc-old .page-static .content .section:first-child h1
 	margin-top 0
 	padding-left 0
 
@@ -159,3 +159,6 @@
 	left 0
 	top 0
 	width 35px
+
+.rc-old .page-settings .section .section-content
+	padding-top 0 !important
